--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "orm:init": "typeorm-ts-node-esm -d ./src/config/data.source.ts",
+    "m:gen": "export NODE_ENV=develop && npm run orm:init migration:generate",
+    "m:run": "export NODE_ENV=develop && npm run orm:init migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -25,6 +28,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "morgan": "^1.10.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
